--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.3</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <artifactId>data-sync-excel-project</artifactId>
+        <groupId>com.github.zybercik00</groupId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>com.github.zybercik00</groupId>
+    <modelVersion>4.0.0</modelVersion>
+
     <artifactId>data-sync-entity-generator</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>data-sync-entity-generator</name>
-    <description>data-sync-entity-generator</description>
+
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -33,14 +31,5 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
